# multifocus-imaging

./: .gitignore  CMakeLists.txt  demo.md  notes.md  readme.md
files/: lena_color_tile_a.tiff  lena_color_tile_b.tiff  mask.tiff
src/: alignment.cpp  alignment.h  custom_multifocus.cpp  custom_multifocus.h  main.cpp  splining.cpp  splining.h  tiling.cpp  tiling.h  utils.h
src/utils/: image.h
